; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/arm_atsam/extr_eeprom.c_eeprom_read_dword.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/arm_atsam/extr_eeprom.c_eeprom_read_dword.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eeprom_read_dword(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @eeprom_read_byte(i32* %5)
  %7 = load i32*, i32** %3, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  %9 = call i32 @eeprom_read_byte(i32* %8)
  %10 = shl i32 %9, 8
  %11 = or i32 %6, %10
  %12 = load i32*, i32** %3, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 2
  %14 = call i32 @eeprom_read_byte(i32* %13)
  %15 = shl i32 %14, 16
  %16 = or i32 %11, %15
  %17 = load i32*, i32** %3, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 3
  %19 = call i32 @eeprom_read_byte(i32* %18)
  %20 = shl i32 %19, 24
  %21 = or i32 %16, %20
  ret i32 %21
}

declare dso_local i32 @eeprom_read_byte(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
